# Dream_Spinner

./: .gitignore  Cargo.toml  README.md  dreamspinner.spec  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: check.yml  rust.yml
assets/: sw.js
dreams_src/: main.ts  settings.html  styles.css
dreams_src/dreams/: clocks.ts  dendraclock.ts
old_src/tau_src/: lib.rs  parse_cli.rs
oldscr/: dreamconfig.rs  dreamspinner.rs
oldscr/dreams/: solid_color.rs
python_src/: dreamspinner.py  parse_cli.py
src/: app.rs  app_settings.rs  dendraclock.rs  dreamconfig.rs  dreamrunner.rs  dreams.rs  dreamspinner.rs  fps_measure.rs  index.html  lib.rs  main.js  main.rs  main.ts  runner.html  styles.css  user_event.rs
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/assets/: color_scheme_data.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_settings.rs  dream_runner.rs  lib.rs  main.rs  settings_window.rs
src.old/: app_settings.rs
src.old/dreams/: monet.rs
src/dreams/: clocks.ts  dendraclock.rs  dendraclock.ts  monet.rs  solid_color.rs
