[package]
name = "dream_spinner"
version = "0.1.0"
authors = ["Barafu Albino <barafu_develops@albino.email>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = { version = "0.29", features = ["serde"] }
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.89"
toml = "0.8.19"
directories = "5.0.1"
rand = "0.8.5"
serde_json = "1.0.128"
egui_extras = "0.29.1"
pixels = "0.14.0"
winit = { version = "0.30.5", features = ["rwh_05"] }
rayon = "1.10.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.70"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

# [patch.crates-io]
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# # if you're using eframe:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
